# schifra

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/core/: add.cpp  core.h  embed.cpp  mult.cpp  point.cpp  sqrt.cpp
test/: CMakeLists.txt  test.cpp
